@@ -164,20 +164,6 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
 name|IndexableFieldType
 import|;
 end_import
@@ -1610,8 +1596,6 @@ parameter_list|,
 name|TokenStream
 name|reuse
 parameter_list|)
-throws|throws
-name|IOException
 block|{
 if|if
 condition|(
