@@ -22,16 +22,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|Reader
 import|;
 end_import
@@ -751,8 +741,6 @@ parameter_list|,
 name|TokenStream
 name|previous
 parameter_list|)
-throws|throws
-name|IOException
 block|{
 return|return
 name|readerValue
